--- a/0713/sub_pjt/src/layout/Header/styles.css
+++ b/0713/sub_pjt/src/layout/Header/styles.css
@@ -5,7 +5,7 @@
     top: 0;
     width: 100%;
     height: 60px;
-    background-color: #dde0ea;
+    background-color: rgba(101, 158, 204, 0.596);
 }   
 
 .wrapper {
@@ -13,4 +13,15 @@
     list-style: none;
     justify-content: space-between;
     margin-right: 30px;
+}
+
+.font {
+    color: navy;
+    font-weight: bold;
+    text-decoration-line: none;
+}
+
+.for_img{
+    justify-items: center;
+    margin: 10px;
 }
